--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header__container">
                 <h1>
-                    <img class="header__logo" src="./src/images/logo.png" alt="">
+                    <img class="header__logo" src="./dist/images/logos/logo.png" alt="">
                 </h1>
                 <ul class="header__links">
                     <li class="header__links__item">
@@ -27,16 +27,20 @@
     </header>
     <section class="hero">
         <div class="hero__logo" >
-            <img src="./src/images/logo.png" alt="">
+            <img src="./dist/images/logos/logo.png" alt="">
         </div>
     </section>
     <section class="trailers">
         <h2>Trailers</h2>
-        <iframe width="384" height="216" src="https://www.youtube.com/embed/Rt2LHkSwdPQ?si=0w2KwoSwIMbe-aWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="384" height="216" src="https://www.youtube.com/embed/0vxOhd4qlnA?si=VVJkEamINfnlt4Rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <iframe width="384" height="216" src="https://www.youtube.com/embed/nyc6RJEEe0U?si=vFF7gNDUwHzHE6GU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <div>Sinopse</div>
-        <p>Após ver a Terra consumindo boa parte de suas reservas naturais, um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper (Matthew McConaughey) é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand (Anne Hathaway), Jenkins (Marlon Sanders) e Doyle (Wes Bentley), ele seguirá em busca de uma nova casa. Com o passar dos anos, sua filha Murph (Mackenzie Foy e Jessica Chastain) investirá numa própria jornada para também tentar salvar a população do planeta.</p>
+        <div class="trailers__videos">
+            <iframe width="384" height="216" src="https://www.youtube.com/embed/Rt2LHkSwdPQ?si=0w2KwoSwIMbe-aWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="trailers__videos__meio" width="384" height="216" src="https://www.youtube.com/embed/0vxOhd4qlnA?si=VVJkEamINfnlt4Rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="384" height="216" src="https://www.youtube.com/embed/nyc6RJEEe0U?si=vFF7gNDUwHzHE6GU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="trailers__sinopse">
+            <h3>Sinopse</h3>
+            <p>Após ver a Terra consumindo boa parte de suas reservas naturais, um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper (Matthew McConaughey) é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand (Anne Hathaway), Jenkins (Marlon Sanders) e Doyle (Wes Bentley), ele seguirá em busca de uma nova casa. Com o passar dos anos, sua filha Murph (Mackenzie Foy e Jessica Chastain) investirá numa própria jornada para também tentar salvar a população do planeta.</p>
+        </div>
     </section>
     
 </body>
