--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interstellar</title>
     <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -14,34 +17,39 @@
                 </h1>
                 <ul class="header__links">
                     <li class="header__links__item">
-                        <a href="#">Trailers</a>
+                        <a class="text title" href="#">Trailers</a>
+                    </li> 
+                    <li class="header__links__item">
+                        <a class="text title" href="#">Elenco</a>
                     </li>
                     <li class="header__links__item">
-                        <a href="#">Elenco</a>
-                    </li>
-                    <li class="header__links__item">
-                        <a href="#">Linha temporal</a>
+                        <a class="text title" href="#">Linha temporal</a>
                     </li>
                 </ul>
         </div>
     </header>
     <section class="hero">
         <div class="hero__logo" >
-            <img src="./dist/images/logos/logo.png" alt="">
+            <img src="./dist/images/logos/logo.png" alt=""> 
         </div>
     </section>
-    <section class="trailers">
-        <h2>Trailers</h2>
-        <div class="trailers__videos">
-            <iframe width="384" height="216" src="https://www.youtube.com/embed/Rt2LHkSwdPQ?si=0w2KwoSwIMbe-aWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe class="trailers__videos__meio" width="384" height="216" src="https://www.youtube.com/embed/0vxOhd4qlnA?si=VVJkEamINfnlt4Rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe width="384" height="216" src="https://www.youtube.com/embed/nyc6RJEEe0U?si=vFF7gNDUwHzHE6GU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="trailers__sinopse">
-            <h3>Sinopse</h3>
-            <p>Após ver a Terra consumindo boa parte de suas reservas naturais, um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper (Matthew McConaughey) é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand (Anne Hathaway), Jenkins (Marlon Sanders) e Doyle (Wes Bentley), ele seguirá em busca de uma nova casa. Com o passar dos anos, sua filha Murph (Mackenzie Foy e Jessica Chastain) investirá numa própria jornada para também tentar salvar a população do planeta.</p>
-        </div>
-    </section>
+    <div class="content">
+        <section class="trailers">
+            <h2 class="title text--giant">Trailers</h2>
+            <div class="trailers__videos">
+                <iframe width="384" height="216" src="https://www.youtube.com/embed/Rt2LHkSwdPQ?si=0w2KwoSwIMbe-aWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="trailers__videos__meio" width="384" height="216" src="https://www.youtube.com/embed/0vxOhd4qlnA?si=VVJkEamINfnlt4Rq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="384" height="216" src="https://www.youtube.com/embed/nyc6RJEEe0U?si=vFF7gNDUwHzHE6GU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="trailers__sinopse">
+                <h3 class="title text">Sinopse</h3>
+                <p class="text--small">Após ver a Terra consumindo boa parte de suas reservas naturais, um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper (Matthew McConaughey) é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand (Anne Hathaway), Jenkins (Marlon Sanders) e Doyle (Wes Bentley), ele seguirá em busca de uma nova casa. Com o passar dos anos, sua filha Murph (Mackenzie Foy e Jessica Chastain) investirá numa própria jornada para também tentar salvar a população do planeta.</p>
+            </div>
+        </section>
+        <section class="elenco">
+            <h2 class="title text--giant">Elenco</h2>
+        </section>
+    </div>
     
 </body>
 </html>
