adicionando elenco e linha temporal

--- a/index.html
+++ b/index.html
@@ -48,8 +48,92 @@
         </section>
         <section class="elenco">
             <h2 class="title text--giant">Elenco</h2>
+            <ul class="elenco__cards">
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/mattew.jpg" alt="Matthew McConaughey">
+                    <p class="text elenco__card__actor">Matthew McConaughey</p>
+                    <p class="text--small"><i>Cooper</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Jessica.jpg" alt="Jessica Chastain">
+                    <p class="text elenco__card__actor">Jessica Chastain</p>
+                    <p class="text--small"><i>Murphy Cooper<br>(adulta)</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/mackenzie.jpg " alt="Mackenzie Foy">
+                    <p class="text elenco__card__actor">Mackenzie Foy</p>
+                    <p class="text--small"><i>Murphy Cooper<br>(criança)</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Anne.jpg" alt="Anne Hathaway">
+                    <p class="text elenco__card__actor">Anne Hathaway</p>
+                    <p class="text--small"><i>Amelia Brand</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/wes.jpg" alt="Wes Bentley">
+                    <p class="text elenco__card__actor">Wes Bentley</p>
+                    <p class="text--small"><i>Doyle</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/David.jpg" alt="David Gyasi">
+                    <p class="text elenco__card__actor">David Gyasi</p>
+                    <p class="text--small"><i>Romilly</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Matt.jpg" alt="Matt Damon">
+                    <p class="text elenco__card__actor">Matt Damon</p>
+                    <p class="text--small"><i>Dr. Mann</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Michel.jpg" alt="Michael Caine">
+                    <p class="text elenco__card__actor">Michael Caine</p>
+                    <p class="text--small"><i>Professor Brand</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Ellen.jpg" alt="Ellen Burstyn">
+                    <p class="text elenco__card__actor">Ellen Burstyn</p>
+                    <p class="text--small"><i>Murphy Cooper<br>(idosa)</i></p>
+                </li>
+                <li class="elenco__cards__item">
+                    <img src="dist/images/elenco/Timothee.jpg" alt="Timothée Chalamet">
+                    <p class="text elenco__card__actor">Timothée Chalamet</p>
+                    <p class="text--small"><i>Tom</i></p>
+                </li>
+            </ul>
+            <div class="elenco__director">
+                <img src="./dist/images/elenco/Nolan.png" alt="Christopher Nolan">
+                <div class="elenco__director__about">
+                    <h4 class="text--big elenco__director__about__title">
+                        Dirigido por <b>Christopher Nolan</b>
+                    </h4>
+                    <p class="text--small">
+                        Christopher Nolan, CBE é um diretor de cinema, roteirista e produtor britânico. Seus doze longas-metragens já arrecadaram o equivalente a mais de 6 bilhões de dólares em todo o mundo, fazendo do diretor um dos mais bem-sucedidos comercialmente da moderna Hollywood.
+                    </p>
+                    <p class="text--small elenco__director__about__movies">
+                        <b>Conhecido por:</b> Tenet (2020), Interestelar (2014), A Origem (2010) e Batman Begins (2005).
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="linha-temporal">
+            <h2 class="title text--giant">Linha temporal</h2>
+            <div class="linha-temporal__legenda">
+                <div class="text murphy">Murphy</div>
+                <div class="text romilly">Romilly</div>
+                <div class="text doyle">Doyle</div>
+                <div class="text amelia">Amelia</div>
+                <div class="text tars">TARS</div>
+                <div class="text cooper">Cooper</div>
+            </div>
+            <div class="linha-temporal__timeline">
+                <img src="./dist/images/outros/timeline.png" alt="">
+            </div>
         </section>
     </div>
+    <footer>
+        <h4 class="text--big">Disponivel para streaming:</h4>
+        <img src="./dist/images/logos/max_logo.png" alt="max logo">
+    </footer>
     
 </body>
 </html>
