--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
     <header class="header header--is-hidden">
         <div class="header__container">
-                <h1>
-                    <img class="header__logo" src="./dist/images/logos/logo.png" alt="">
-                </h1>
+                <a href="#">
+                    <h1>
+                        <img class="header__logo" src="./dist/images/logos/logo.png" alt="">
+                    </h1>
+                </a>
                 <ul class="header__links">
                     <li class="header__links__item">
                         <a class="text title" href="#trailer">Trailers</a>
@@ -132,7 +134,9 @@
     </div>
     <footer>
         <h4 class="text--big">Disponivel para streaming:</h4>
-        <img src="./dist/images/logos/max_logo.png" alt="max logo">
+        <a href="https://www.max.com/br/pt" target="_blank">
+            <img src="./dist/images/logos/max_logo.png" alt="max logo">
+        </a>
     </footer>
     
 </body>
